update nav and education

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fa-solid fa-bars text-white"></i>
             </button>
-            <div class="collapse navbar-collapse justify-content-end align-items-center" id="navbarTogglerDemo02">
+            <div class="collapse navbar-collapse justify-content-end align-items-center bg-darkblue" id="navbarTogglerDemo02">
                 <ul class="navbar-nav mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="/">Home</a>
@@ -34,9 +34,6 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Skills</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Blogs</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Contact</a>
@@ -79,64 +76,6 @@
                 </div>
             </div>
             
-        </section>
-
-        <!-- About Myself Section -->
-        <section id="about">
-            <div class="text-center py-5">
-                <h1>About Myself</h1>   
-            </div>            
-            <div class="h-600">
-                <div class="row row-cols-1 row-cols-md-2 g-4 px-2 px-md-0 pb-5">
-                    <div class="col-md-3">
-                        <div class="d-flex justify-content-center">
-                            <img src="./images/logo.png" alt="Logo" class="about-img" />
-                        </div>
-                    </div>
-                    <div class="col-md-9 d-flex align-content-center">
-                        <div class="my-auto">
-                            <h4 class="mb-3">Hello there, I'm <b class="text-yellow fs-3">Iftakher Hossen</b></h4>
-                            <p>I'm skilled frontend developer with experience in JavScript, and expertise in frameworks like React, Next.JS, NodeJS, and ElectronJS. I'm a quick learner and collaborate closely with clients to create efficient, scalable, and user-friendly solutions that solve real-world problems. Let's work together to bring your ideas to life!</p>
-                        </div>
-                    </div>
-                </div>
-                <hr />
-                <div class="row row-cols-1 row-cols-lg-2 g-4 px-2 px-md-3 pt-5">
-                    <div class="col-12 col-lg-6">
-                        <h2>Education</h2>
-                        <div class="py-3">
-                            <ul>
-                                <li class="fs-5">Diploma-in-Engineering</li>
-                                <div class="p-25">                                    
-                                    <p class="fs-7">Shyamoli Ideal Polytechnic Institute</p>
-                                    <p class="fs-7">Computer Science & Technology</p>
-                                    <p class="fs-7">Result 3.74 • Passing Year 2022</p>
-                                </div>
-                                <li class="fs-5">Secondary School Certificate</li>
-                                <div class="p-25">                                    
-                                    <p class="fs-7">Bashir Uddin Ideal School & College</p>
-                                    <p class="fs-7">Science • Result 4.11 • Year 2018</p>
-                                </div>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-12 col-lg-6">
-                        <h2>Certifications</h2>
-                        <div class="py-3">
-                            <ul>
-                                <li class="fs-5">CSE Fundamentals with Phitron</li>
-                                <div class="p-25">
-                                    <p class="fs-7">Phitron • 3rd Semester (Running)</p>
-                                </div>
-                                <li class="fs-5">Complete Web Development Course</li>
-                                <div class="p-25">
-                                    <p class="fs-7">Programming Hero • Completed in 2022</p>
-                                </div>                                
-                            </ul>
-                        </div>
-                    </div>                    
-                </div>
-            </div>
         </section>
 
         <!-- Projects Section -->
@@ -366,50 +305,86 @@
         <!-- Skills Section -->
         <section id="skills">
             <div class="h-600">
-                <div class="text-center py-5">
-                    <h1>My Skills</h1>
-                </div>
-                <div class="d-flex flex-column gap-3">
-                    <div>
-                        <h5 class="fw-bold">Expertise: </h5>
-                        <div class="d-flex flex-wrap gap-25 my-4">
-                            <div class="badge text-bg-secondary fs-6 py-2 px-3">HTML</div>
-                            <div class="badge text-bg-secondary fs-6 py-2 px-3">CSS</div>
-                            <div class="badge text-bg-secondary fs-6 py-2 px-3">JavaScript</div>
-                            <div class="badge text-bg-secondary fs-6 py-2 px-3">React</div>
-                            <div class="badge text-bg-secondary fs-6 py-2 px-3">Bootstrap</div>
-                            <div class="badge text-bg-secondary fs-6 py-2 px-3">TailwindCSS</div>
+                <div class="row row-cols-1 row-cols-lg-2 g-4 px-2 px-md-3 pt-5">
+                    <div class="col-12 col-lg-6">
+                        <div class="d-flex flex-column gap-3">
+                            <div>
+                                <h5 class="fw-bold">Expertise: </h5>
+                                <div class="d-flex flex-wrap gap-25 my-4">
+                                    <div class="badge text-bg-secondary fs-6 py-2 px-3">HTML</div>
+                                    <div class="badge text-bg-secondary fs-6 py-2 px-3">CSS</div>
+                                    <div class="badge text-bg-secondary fs-6 py-2 px-3">JavaScript</div>
+                                    <div class="badge text-bg-secondary fs-6 py-2 px-3">React</div>
+                                    <div class="badge text-bg-secondary fs-6 py-2 px-3">Bootstrap</div>
+                                    <div class="badge text-bg-secondary fs-6 py-2 px-3">TailwindCSS</div>
+                                </div>
+                            </div>
+                            <div>
+                                <h5 class="fw-bold">Comfortable: </h5>
+                                <div class="d-flex flex-wrap gap-25 my-4">                                    
+                                    <div class="badge text-bg-secondary fs-6 py-2 px-3">NextJs</div>
+                                    <div class="badge text-bg-secondary fs-6 py-2 px-3">NodeJs</div>
+                                    <div class="badge text-bg-secondary fs-6 py-2 px-3">ExpressJs</div>
+                                    <div class="badge text-bg-secondary fs-6 py-2 px-3">MongoDB</div>
+                                    <div class="badge text-bg-secondary fs-6 py-2 px-3">ElectronJs</div>                     
+                                </div>
+                            </div>
+                            <div>
+                                <h5 class="fw-bold">Familiar: </h5>
+                                <div class="d-flex flex-wrap gap-25 my-4">
+                                    <div class="badge text-bg-secondary fs-6 py-2 px-3">C</div>
+                                    <div class="badge text-bg-secondary fs-6 py-2 px-3">C++</div>
+                                    <div class="badge text-bg-secondary fs-6 py-2 px-3">Python</div>
+                                    <div class="badge text-bg-secondary fs-6 py-2 px-3">MySQL</div>                      
+                                </div>
+                            </div>
+                            <div>
+                                <h5 class="fw-bold">Tools: </h5>
+                                <div class="d-flex flex-wrap gap-25 my-4">
+                                    <div class="badge text-bg-secondary fs-6 py-2 px-3">VS Code</div>
+                                    <div class="badge text-bg-secondary fs-6 py-2 px-3">Jira</div>
+                                    <div class="badge text-bg-secondary fs-6 py-2 px-3">Trello</div>
+                                    <div class="badge text-bg-secondary fs-6 py-2 px-3">Git</div>
+                                    <div class="badge text-bg-secondary fs-6 py-2 px-3">Github</div>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <div>
-                        <h5 class="fw-bold">Comfortable: </h5>
-                        <div class="d-flex flex-wrap gap-25 my-4">
-                            <div class="badge text-bg-secondary fs-6 py-2 px-3">React</div>
-                            <div class="badge text-bg-secondary fs-6 py-2 px-3">NextJs</div>
-                            <div class="badge text-bg-secondary fs-6 py-2 px-3">NodeJs</div>
-                            <div class="badge text-bg-secondary fs-6 py-2 px-3">ExpressJs</div>
-                            <div class="badge text-bg-secondary fs-6 py-2 px-3">MongoDB</div>                        
+                    <div class="col-12 col-lg-6">
+                        <div>
+                            <h2>Education</h2>
+                            <div class="py-3">
+                                <ul>
+                                    <li class="fs-5">Diploma-in-Engineering</li>
+                                    <div class="p-25">                                    
+                                        <p class="fs-7">Shyamoli Ideal Polytechnic Institute</p>
+                                        <p class="fs-7">Computer Science & Technology</p>
+                                        <p class="fs-7">Result 3.74 • Passing Year 2022</p>
+                                    </div>
+                                    <li class="fs-5">Secondary School Certificate</li>
+                                    <div class="p-25">                                    
+                                        <p class="fs-7">Bashir Uddin Ideal School & College</p>
+                                        <p class="fs-7">Science • Result 4.11 • Year 2018</p>
+                                    </div>
+                                </ul>
+                            </div>
                         </div>
-                    </div>
-                    <div>
-                        <h5 class="fw-bold">Familiar: </h5>
-                        <div class="d-flex flex-wrap gap-25 my-4">
-                            <div class="badge text-bg-secondary fs-6 py-2 px-3">C</div>
-                            <div class="badge text-bg-secondary fs-6 py-2 px-3">C++</div>
-                            <div class="badge text-bg-secondary fs-6 py-2 px-3">Python</div>
-                            <div class="badge text-bg-secondary fs-6 py-2 px-3">MySQL</div>                      
-                        </div>
-                    </div>
-                    <div>
-                        <h5 class="fw-bold">Tools: </h5>
-                        <div class="d-flex flex-wrap gap-25 my-4">
-                            <div class="badge text-bg-secondary fs-6 py-2 px-3">VS Code</div>
-                            <div class="badge text-bg-secondary fs-6 py-2 px-3">Jira</div>
-                            <div class="badge text-bg-secondary fs-6 py-2 px-3">Trello</div>
-                            <div class="badge text-bg-secondary fs-6 py-2 px-3">Git</div>
-                            <div class="badge text-bg-secondary fs-6 py-2 px-3">Github</div>
-                        </div>
-                    </div>
+                        <div>
+                            <h2>Certifications</h2>
+                            <div class="py-3">
+                                <ul>
+                                    <li class="fs-5">CSE Fundamentals with Phitron</li>
+                                    <div class="p-25">
+                                        <p class="fs-7">Phitron • 3rd Semester (Running)</p>
+                                    </div>
+                                    <li class="fs-5">Complete Web Development Course</li>
+                                    <div class="p-25">
+                                        <p class="fs-7">Programming Hero • Completed in 2022</p>
+                                    </div>                                
+                                </ul>
+                            </div>
+                        </div>                        
+                    </div>                    
                 </div>
             </div>
         </section>
